# conllulex

./: .coveragerc  CONTRIBUTING.rst  README.md  README.rst  chinese.conllulex  setup.cfg  setup.py
conllulex/: config.py  conllulex_enrichment.py  conllulex_to_json.py  govobj.py  lexcatter.py  main.py  mwe_render.py  reading.py  supersenses.py  tagging.py
docs/: conf.py  index.rst
src/conllulex/: skeleton.py
tests/: conftest.py  test_skeleton.py
