# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.readthedocs.io/en/stable/userguide/declarative_config.html

[metadata]
name = conllulex
description = Add a short description here!
author = Luke Gessler
author_email = lukegessler@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/lgessler/conllulex
# Add here related links, for example:
project_urls =
    Documentation = https://github.com/lgessler/conllulex/README.md
#    Source = https://github.com/pyscaffold/pyscaffold/
#    Changelog = https://pyscaffold.org/en/latest/changelog.html
#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python


[options]
zip_safe = False
packages = conllulex
include_package_data = True

# Require a min/specific Python version (comma-separated conditions)
# python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version>"3.6"
    conllu>=4.4.1,<5.0
    click>=8.0.3,<9.0

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install conllulex[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
# testing =
#     setuptools
#     pytest
#     pytest-cov

[options.entry_points]
console_scripts =
    conllulex-enrich = conllulex.main:enrich
    conllulex2json = conllulex.main:conllulex2json
    conllulex2json-streusle = conllulex.main:conllulex2json_streusle
    conllulex2json-pastrie = conllulex.main:conllulex2json_pastrie
    conllulex2json-hindi = conllulex.main:conllulex2json_hindi
# Add here console scripts like:
# console_scripts =
#     script_name = conllulex.module:function
# For example:
# console_scripts =
#     fibonacci = conllulex.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

# [tool:pytest]
# # Specify command line options as you would do when invoking pytest directly.
# # e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# # in order to write a coverage file that can be read by Jenkins.
# # CAUTION: --cov flags may prohibit setting breakpoints while debugging.
# #          Comment those flags to avoid this pytest issue.
# addopts =
#     --cov conllulex --cov-report term-missing
#     --verbose
# norecursedirs =
#     dist
#     build
#     .tox
# testpaths = tests
# # Use pytest markers to select/deselect specific tests
# # markers =
# #     slow: mark tests as slow (deselect with '-m "not slow"')
# #     system: mark end-to-end system tests

# [devpi:upload]
# # Options for the devpi: PyPI server and packaging tool
# # VCS export must be deactivated since we are using setuptools-scm
# no_vcs = 1
# formats = bdist_wheel

# [flake8]
# # Some sane defaults for the code style checker flake8
# max_line_length = 88
# extend_ignore = E203, W503
# # ^  Black-compatible
# #    E203 and W503 have edge cases handled by black
# exclude =
#     .tox
#     build
#     dist
#     .eggs
#     docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.1
package = conllulex
